allprojects {
  repositories {
    mavenLocal()
    maven { url 'https://jitpack.io' }
    mavenCentral()
    jcenter()
  }

  apply plugin: 'java'
  apply plugin: 'idea'

  sourceCompatibility = JavaVersion.VERSION_1_8
  targetCompatibility = JavaVersion.VERSION_1_8
}

group = 'net.sourceforge'